# enclave-support-libraries

./: Cargo.toml  README.md
crypto/: Cargo.toml
crypto/src/: ecdsa.rs  ed25519.rs  lib.rs  sr25519.rs  traits.rs
extrinsics/: Cargo.toml
extrinsics/src/: lib.rs  primitives.rs  utils.rs
src/: lib.rs
