[package]
name = "enclave-support-libraries"
version = "0.1.1"
edition = "2018"
authors = ["Gautham J <gautham@polkadex.trade>"]

[dependencies]
crypto = { path = "crypto", optional = true }
extrinsics = { path = "extrinsics", optional = true }

[workspace]
members = ["crypto", "extrinsics"]


[features]
default = ["crypto", "extrinsics"]

